// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Upload application file should fail for path traversal when applicationUniversalIdentifier does not match any installed application 1`] = `
{
  "extensions": {
    "code": "NOT_FOUND",
    "subCode": "APPLICATION_NOT_FOUND",
    "userFriendlyMessage": "Application not found.",
  },
  "message": "Application not found in workspace.",
  "name": "NotFoundError",
}
`;

exports[`Upload application file should fail for path traversal when fileFolder is not an allowed application file folder 1`] = `
{
  "extensions": {
    "code": "BAD_USER_INPUT",
    "http": {
      "status": 400,
    },
    "userFriendlyMessage": "An error occurred.",
  },
  "message": "Value "core-picture" does not exist in "FileFolder" enum. Did you mean the enum value "CorePicture" or "PersonPicture"?",
  "name": "GraphQLError",
}
`;

exports[`Upload application file should fail for path traversal when filePath contains backslash path traversal 1`] = `
{
  "extensions": {
    "code": "BAD_USER_INPUT",
    "userFriendlyMessage": "An error occurred.",
  },
  "message": "filePath contains unsafe characters or path traversal",
  "name": "UserInputError",
}
`;

exports[`Upload application file should fail for path traversal when filePath contains relative path traversal (../) 1`] = `
{
  "extensions": {
    "code": "BAD_USER_INPUT",
    "userFriendlyMessage": "An error occurred.",
  },
  "message": "filePath contains unsafe characters or path traversal",
  "name": "UserInputError",
}
`;

exports[`Upload application file should fail for path traversal when filePath contains upward traversal (../../) 1`] = `
{
  "extensions": {
    "code": "BAD_USER_INPUT",
    "userFriendlyMessage": "An error occurred.",
  },
  "message": "filePath contains unsafe characters or path traversal",
  "name": "UserInputError",
}
`;

exports[`Upload application file should fail for path traversal when filePath is an absolute path 1`] = `
{
  "extensions": {
    "code": "BAD_USER_INPUT",
    "userFriendlyMessage": "An error occurred.",
  },
  "message": "filePath contains unsafe characters or path traversal",
  "name": "UserInputError",
}
`;

exports[`Upload application file should fail for path traversal when filePath is empty 1`] = `
{
  "extensions": {
    "code": "BAD_USER_INPUT",
    "userFriendlyMessage": "An error occurred.",
  },
  "message": "filePath contains unsafe characters or path traversal, filePath should not be empty",
  "name": "UserInputError",
}
`;
